<resources>
    <string name="app_name">Kpb</string>
    <string name="app_name_detail">Kartu Petani Berjaya</string>
    <string name="app_id">v3.6</string>
    <string name="app_name_country">Provinsi Lampung</string>
    <string name="invalidToken">0030</string>
    <string name="clientKey">SB-Mid-client-EuSHixVAB9mQO0by</string>
    <string name="urlMerchant">https://www.kpb.lampungprov.go.id/</string>
    <string name="end_point">https://apikpb.ubl.ac.id:5070/</string>
    <string name="end_point_pasarBebasDevelop">http://192.168.18.9:9068/</string>
    <string name="end_point_pasarBebas">https://apikpb.ubl.ac.id:9068/</string>
    <string name="img_end_point">https://apikpb.ubl.ac.id:9068/img-barang/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Page %1$d</string>
    <string name="title_home">Home</string>
    <string name="date">00 Januari 0000</string>
    <string name="title_dashboard">Profile</string>
    <string name="loading">Memuat Permintaan...</string>
    <string name="title_exit">Exit</string>
    <string name="title_anak">Data Anak</string>
    <string name="next">SELANJUTNYA</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="donate_dialog_title">Support me</string>
    <string name="donate_dialog_message">If you like this library project and you are willing to support me, you can donate me via Alipay or PayPal.\n\nAlipay: fythonx\@gmail.com\nPayPal: Click PAYPAL button to open a new tab.</string>
    <string name="doante_dialog_paypal_button">PayPal</string>
    <string name="item_vertical_stepper">Vertical Stepper (Item View)</string>
    <string name="item_vertical_stepper_adapter">Vertical Stepper (Adapter)</string>
    <string name="content_step_0">This is the first step. Click OK button to next step.\n\nTest Message.</string>
    <string name="content_step_1">This is the second step. Click OK button to next step or Cancel button to previous step.\n\nThe summary text of each step is optional. If you haven\'t set, summary view won\'t be displayed.</string>
    <string name="content_step_2">This is the last step. You can finish steps now.</string>
    <string name="termCondition"> <![CDATA[
        <b><p>1. Membuka rekening Bank pada Bank yang telah bekerjasama dengan aplikasi Kartu Petani Berjaya ( Bank Lampung, Bank Mandiri, Bank BRI dan Bank BNI ). </p>
        <p>2. Bersedia menyetorkan dana sebagai modal usaha tani pada rekening Petani yang terdaftar pada program PKPB.</p>
        <p>3. Memasukan Nomor Rekening Kedalam Akun Aplikasi KPB.</p>
        <p>4. Jika membutuhkan permodalan usaha tani, petani mengajukan KUR dan pinjaman melalui aplikasi PKPB.</p>
        <p>5. Bersedia untuk melakukan standing instruction  untuk transaksi pembayaran yang ada dalam Rencana Usaha Tani pada aplikasi KPB.</p>
        <p>6. Dana  yang telah disimpan di bank atau dana hasil Pinjaman dari KUR maupun dari lembaga keuangan lainnya bersedia disimpan ( hold ) sementara untuk keperluan rencana usaha tani</p>
        <p>7. Bersedia menjual hasil panen kepada member KPB sesuai harga pasar yang berlaku.</p>
        <p>8. Bersedia mengambil atau menebus pesanan pupuk subsidi maupun non subsidi pestisida benih dll, paling lambat 7 hari dari tanggal yang tertera dalam Rencana Usaha yang di setujui.</p>
        <p>9. Mengikuti segala persyaratan dan ketentuan yang berlaku dalam Aplikasi Kartu Petani Berjaya.</p></b>
        <p></p>
        <p>Menyatakan bahwa data data yang telah diisi adalah benar, dan saya bertanggung jawab atas pengisian data palsu akan di ancam sesuai dengan hukum dan undang undang yang berlaku.</p></b>
        ]]>
        </string>
    <string name="toggle_animation_button">Toggle Animation</string>
    <string-array name="stepView">
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="anak">
        <item>Anak ke 1</item>
        <item>Anak ke 2</item>
        <item>Anak ke 3</item>
        <item>Anak ke 4</item>
        <item>Anak ke 5</item>
        <item>Anak ke 6</item>
        <item>Anak ke 7</item>
        <item>Anak ke 8</item>
        <item>Anak ke 9</item>
        <item>Anak ke 10</item>
        <item>Anak ke 11</item>
        <item>Anak ke 12</item>
        <item>Anak ke 13</item>
        <item>Anak ke 14</item>
        <item>Anak ke 15</item>
        <item>Anak ke 16</item>
        <item>Anak ke 17</item>
        <item>Anak ke 18</item>
    </string-array>
    <string-array name="agama">
        <item>Islam</item>
        <item>Kristen Protestan</item>
        <item>Katolik</item>
        <item>Hindu</item>
        <item>Buddha</item>
        <item>Kong Hu Cu</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="pendidikan">
        <item>SD / Sederajat</item>
        <item>SMP / Sederajat</item>
        <item>SMA / Sederajat</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="PendidikanAnak">
        <item>Belum Sekolah</item>
        <item>TK/ PAUD</item>
        <item>SD/ MI</item>
        <item>SMP / MT</item>
        <item>SMA/SMK/MA</item>
        <item>Perguruan Tinggi</item>
        <item>Berhenti Sekolah</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="perkawinan">
        <item>Menikah</item>
        <item>Belum Menikah</item>
    </string-array>
    <string-array name="HubKeluarga">
        <item>Orang Tua Kandung/ Mertua</item>
        <item>Saudara</item>
    </string-array>
    <string-array name="statusRumah">
        <item>Milik Sendiri</item>
        <item>Milik Keluarga</item>
        <item>Sewa</item>
        <item>Menumpang</item>
    </string-array>
    <string-array name="statusLahan">
        <item>Milik Sendiri</item>
        <item>Milik Keluarga</item>
        <item>Sewa</item>
        <item>Menumpang</item>
        <item>Bekerja di lahan orang lain</item>
    </string-array>
    <string-array name="fasilitasListrik">
        <item>Ada - PLN</item>
        <item>Ada - Bukan PLN</item>
        <item>Tidak Ada</item>
    </string-array>
    <string-array name="kendaraan">
        <item>Sepeda</item>
        <item>Sepeda Motor</item>
        <item>Mobil</item>
        <item>Tidak Ada</item>
    </string-array>
    <string-array name="ternak">
        <item>Ikan - Kolam</item>
        <item>Unggas</item>
        <item>Sapi/ Kerbau/ Kambing</item>
        <item>Tidak Ada</item>
    </string-array>
    <string name="provinsi">Provinsi</string>
    <string name="title_activity_detail_profile">detailProfile</string>
    <string name="title_activity_asset">Subsektor anda</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="copyright">Copyright \u00A9 2020 - Digital Tani Berjaya</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_a">Layanan Kami</string>
    <string name="menu_b">Layanan Lainnya</string>
    <string name="menu_c">Dukungan</string>
    <string name="find">Pengguna Ditemukan</string>
    <string name="poktan">POKTAN PENGGUNA</string>
    <string name="nama">Nama Lengkap (sesuai e-KTP)</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nik">Nomor Induk Kependudukan</string>
    <string name="pass">Kata Sandi</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="desa">Desa</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="confirm_pass">Ulangi Kata Sandi</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="menu_rut">Rencana Usaha</string>
    <string name="menu_rut_desc">Rencana Usaha Tani</string>
    <string name="menu_pupuk">Pupuk</string>
    <string name="menu_pasar">Pasar Tani</string>
    <string name="menu_keuangan">Keuangan</string>
    <string name="menu_transaksi">Transaksi</string>
    <string name="menu_kartu">Kartu Petani</string>
    <string name="menu_kur">KUR</string>
    <string name="menu_beasiswa">Informasi Beasiswa</string>
    <string name="menu_beasiswa_desc">Kami menyediakan informasi beasiswa bagi para anak anggota tergabung.</string>
    <string name="menu_portal">Portal Informasi</string>
    <string name="menu_portal_desc">Jelajahi berbagai macam informasi mengenai layanan yang dapat anda nikmati.</string>
    <string name="menu_portal_peternakan">Sistem informasi Pasar online nasional ternak</string>
    <string name="back">Kembali</string>
    <string name="add">Tambah</string>
    <string name="get_started">Mulai</string>
    <string name="check">Masukan NIK Anda</string>
    <string name="signin">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="go_login">Sudah punya akun ? silahkan masuk !</string>
    <string name="go_regist">Belum punya akun ? Daftar Sekarang !</string>
    <string name="popup_a">Keuntungan bergabung dengan KPB ?</string>
    <string name="popup_b">Syarat untuk bergabung KPB !</string>
    <string name="lorem_title">Lorem Ipsum</string>
    <string name="lorem_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="menu_komoditi">komoditas Tersedia</string>
    <string name="total_aset">TOTAL SUBSEKTOR</string>
    <string name="sub_sektor">SUB SEKTOR</string>
    <string name="count">01</string>
    <string name="atur_rut">ATUR RUT</string>
    <string name="tambah_aset">TAMBAH</string>
    <string name="tambah_komoditas">Tambah Data Komoditas</string>
    <string name="luas_tanah">Luas Tanah</string>
    <string name="banyaknya">Banyaknya</string>
    <string name="masa_tanam">Masa Tanam</string>
    <string name="selesai">selesai</string>
    <string name="masa_tanam_01">Masa Tanam 01</string>
    <string name="luas_lahan">Luas Lahan</string>
    <string name="jumlah">Jumlah</string>
    <string name="tambah_masatanam">Tambah Masa Tanam</string>
    <string name="info_1">Luas Lahan / Banyak komoditas</string>
    <string name="setuju">Setuju</string>
    <string name="profile">Rincian data diri</string>
    <string name="lta">Luas Tanah 1</string>
    <string name="ltb">Luas Tanah 2</string>
    <string name="ltc">Luas Tanah 3</string>
    <string name="edit">Perbaharui</string>
    <string name="telp">Nomor Telephone</string>
    <string name="telp_number">+62 877 7625 0855</string>
    <string name="detail">Lihat detail</string>
</resources>