<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".features.petani.profile.Profile">


    <include layout="@layout/toolbar_default_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/banner_bg"
                        android:fitsSystemWindows="true"
                        android:gravity="center"
                        android:layerType="software"
                        android:orientation="vertical"
                        android:paddingBottom="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profile_image"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:padding="7dp"
                                android:src="@drawable/sample"
                                app:civ_border_color="#F3EFEF"
                                app:civ_border_width="3dp"
                                app:civ_circle_background_color="#F3EFEF" />

                            <ImageButton
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="-23dp"
                                android:layout_marginLeft="-23dp"
                                android:layout_marginTop="35dp"
                                android:background="@drawable/rounded_left"
                                android:contentDescription="@string/lorem_title"
                                android:padding="5dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/ic_add_cam" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/mNama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/lorem_title"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/mNik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/nik"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/mPoktan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/lorem_title"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center|left"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/ic_userz" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/profile"
                                android:textColor="@color/color_default_black"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:gravity="end">

                            <Button
                                android:id="@+id/mEditProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:backgroundTint="@color/color_default_blue"
                                android:drawableRight="@drawable/ic_edit_black"
                                android:drawablePadding="5dp"
                                android:text="@string/edit"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:gravity="center"
                        android:visibility="gone"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/mCardRut"
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                app:cardBackgroundColor="@color/white"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="2dp"
                                app:cardUseCompatPadding="true"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/mMt1"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="10"
                                        android:textSize="22sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="hektar"
                                        android:textSize="12sp" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:text="@string/lta"
                                android:textColor="#999C9E" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardPupuk"
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                app:cardBackgroundColor="@color/white"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="2dp"
                                app:cardUseCompatPadding="true"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/mMt2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="10"
                                        android:textSize="22sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="hektar"
                                        android:textSize="12sp" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:text="@string/ltb"
                                android:textColor="#999C9E" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardPasarTani"
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                app:cardBackgroundColor="@color/white"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="2dp"
                                app:cardUseCompatPadding="true"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/mMt3"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="10"
                                        android:textSize="22sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="hektar"
                                        android:textSize="12sp" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:text="@string/ltc"
                                android:textColor="#999C9E" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal"
                        android:paddingRight="10dp">

                        <Button
                            android:id="@+id/viewProfile"
                            android:layout_width="80dp"
                            android:layout_height="20dp"
                            android:background="@android:color/transparent"
                            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                            android:gravity="center"
                            android:text="@string/detail"
                            android:textAllCaps="false"
                            android:textColor="@color/color_default_blue"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/alamat"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/mAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/lorem_desc"
                            android:textColor="@color/color_default_black"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="#F3EFEF" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/telp"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/mPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/telp_number"
                            android:textColor="@color/color_default_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copyright" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>